--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-NewsApp/node_modules/.cache/default-development/10.pack
-NewsApp/node_modules/.cache/default-development/10.pack
-NewsApp/node_modules/.cache/default-development/11.pack
-NewsApp/node_modules/.cache/default-development/10.pack
-NewsApp/node_modules/.cache/default-development/index.pack
-NewsApp/node_modules/.cache/default-development/index.pack.old
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.eslintcache
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
