--- a/NewsApp/.gitignore
+++ b/NewsApp/.gitignore
@@ -1,6 +1,10 @@
 # Ignore node modules
 /node_modules/
 
+# Ignore build output
+/build/
+/dist/
+
 # Ignore ESLint cache
 .eslintcache
 
@@ -11,3 +15,20 @@
 # Ignore .cache folders (e.g., ESLint, Vite, etc.)
 .cache/
 /node_modules/.cache/
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Ignore log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+.DS_Store
